--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,9 @@
 		"psr-4": {
 			"wenshizhengxin\\qrcode_sdk\\": "src/"
 		}
+    },
+    "scripts":{
+      "post-install-cmd":"wenshizhengxin\\RemoveGitDir::postInstall",
+      "post-update-cmd":"wenshizhengxin\\RemoveGitDir::postUpdate"
     }
 }
